// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1`] = `
<div
  className=" css-1mrozmg-CardStyle ejy78ug0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className=" css-bgc4kb-TopicStyle ejy78ug5"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle ejy78ug6"
  >
    Description
  </div>
</div>
`;

exports[`with Badge 1`] = `
<div
  className=" css-1mrozmg-CardStyle ejy78ug0"
>
  <img
    alt=""
    className=" css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle ejy78ug3"
  >
    <div
      className="css-1dspmwm-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className=" css-bgc4kb-TopicStyle ejy78ug5"
  >
    topic
  </div>
  <div
    className=" css-mk6kj1-DescriptionStyle ejy78ug6"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align 1`] = `
<div
  className="center css-1mrozmg-CardStyle ejy78ug0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="center css-bgc4kb-TopicStyle ejy78ug5"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle ejy78ug6"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Badge 1`] = `
<div
  className="center css-1mrozmg-CardStyle ejy78ug0"
>
  <img
    alt=""
    className="center css-142sfdf-StyledIcon ejy78ug2"
    src="test-image-stub"
  />
  <div
    className="css-vz2qld-BadgeStyle ejy78ug3"
  >
    <div
      className="css-1dspmwm-StyledBadge e1sxbycx0"
    >
      BADGETEXT
    </div>
  </div>
  <div
    className="center css-bgc4kb-TopicStyle ejy78ug5"
  >
    topic
  </div>
  <div
    className="center css-mk6kj1-DescriptionStyle ejy78ug6"
  >
    Description
  </div>
</div>
`;

exports[`with Center Align and Link 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="center css-1mrozmg-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className="center css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="center css-bgc4kb-TopicStyle ejy78ug5"
    >
      topic
    </div>
    <div
      className="center css-mk6kj1-DescriptionStyle ejy78ug6"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Center Align, Link and Badge 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className="center css-1mrozmg-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className="center css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-vz2qld-BadgeStyle ejy78ug3"
    >
      <div
        className="css-1dspmwm-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className="center css-bgc4kb-TopicStyle ejy78ug5"
    >
      topic
    </div>
    <div
      className="center css-mk6kj1-DescriptionStyle ejy78ug6"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Link 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-1mrozmg-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className=" css-bgc4kb-TopicStyle ejy78ug5"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug6"
    >
      Description
    </div>
  </div>
</a>
`;

exports[`with Link and Badge 1`] = `
<a
  className="css-kunpmx-StyledLink ejy78ug1"
  href="https://www.dwolla.com"
  onClick={[Function]}
  onMouseEnter={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    className=" css-1mrozmg-CardStyle ejy78ug0"
  >
    <img
      alt=""
      className=" css-142sfdf-StyledIcon ejy78ug2"
      src="test-image-stub"
    />
    <div
      className="css-vz2qld-BadgeStyle ejy78ug3"
    >
      <div
        className="css-1dspmwm-StyledBadge e1sxbycx0"
      >
        BADGETEXT
      </div>
    </div>
    <div
      className="css-17etk8v-LinkIconStyle ejy78ug4"
    >
      <svg
        width={13}
      />
    </div>
    <div
      className=" css-bgc4kb-TopicStyle ejy78ug5"
    >
      topic
    </div>
    <div
      className=" css-mk6kj1-DescriptionStyle ejy78ug6"
    >
      Description
    </div>
  </div>
</a>
`;
